main/default/objects/Log__c/fields/Apex_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Name__c</fullName>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>