main/default/objects/Log__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <formula>NOT(ISBLANK(Bug_Tracker__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>