main/default/objects/Log__c/fields/Async_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_Id__c</fullName>
    <label>Async Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>