main/default/objects/Log__c/fields/Async_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_Name__c</fullName>
    <label>Async Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>