main/default/objects/Log__c/fields/Audit_Trail_available__c.field-meta.xml
<CustomField>
    <fullName>Audit_Trail_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Trail available</label>
    <type>Checkbox</type>
</CustomField>