main/default/objects/Log__c/fields/Broadcast_Status__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Status__c</fullName>
    <label>Broadcast Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>