main/default/objects/Log__c/fields/Bug_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Bug_Tracker__c</fullName>
    <description>Link to this issue in an external bug tracker application</description>
    <inlineHelpText>Link to this issue in an external bug tracker application</inlineHelpText>
    <label>Bug Tracker</label>
    <type>Url</type>
</CustomField>