main/default/objects/Log__c/fields/Created_At_New__c.field-meta.xml
<CustomField>
    <fullName>Created_At_New__c</fullName>
    <label>Created At New</label>
    <type>DateTime</type>
</CustomField>