main/default/objects/Log__c/fields/Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Created_Timestamp__c</fullName>
    <label>Created Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>