main/default/objects/Log__c/fields/Deploy_Results__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Results__c</fullName>
    <label>Deploy Results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>