main/default/objects/Log__c/fields/Deploy_results_available__c.field-meta.xml
<CustomField>
    <fullName>Deploy_results_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deploy results available</label>
    <type>Checkbox</type>
</CustomField>