main/default/objects/Log__c/fields/Do_Not_Create_Issue__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Create Issue</label>
    <type>Checkbox</type>
</CustomField>