main/default/objects/Log__c/fields/Exception_Codes__c.field-meta.xml
<CustomField>
    <fullName>Exception_Codes__c</fullName>
    <label>Exception Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DYNAMIC VALUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>