main/default/objects/Log__c/fields/Flow_Link__c.field-meta.xml
<CustomField>
    <fullName>Flow_Link__c</fullName>
    <formula>HYPERLINK(Organization_Url__c&amp;&apos;/builder_platform_interaction/flowBuilder.app?isFromAloha=true&amp;flowId=&apos;&amp;Flow_Version_Id__c, Flow_API_Name__c,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Link</label>
    <type>Text</type>
</CustomField>