main/default/objects/Log__c/fields/Flow_Version__c.field-meta.xml
<CustomField>
    <fullName>Flow_Version__c</fullName>
    <label>Flow Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>