main/default/objects/Log__c/fields/Flow_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Flow_Version_Id__c</fullName>
    <label>Flow Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>