main/default/objects/Log__c/fields/Hash_1__c.field-meta.xml
<CustomField>
    <fullName>Hash_1__c</fullName>
    <label>Hash 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>