main/default/objects/Log__c/fields/Hash_2__c.field-meta.xml
<CustomField>
    <fullName>Hash_2__c</fullName>
    <label>Hash 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>