main/default/objects/Log__c/fields/Hash_3__c.field-meta.xml
<CustomField>
    <fullName>Hash_3__c</fullName>
    <label>Hash 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>