main/default/objects/Log__c/fields/Installed_Packages__c.field-meta.xml
<CustomField>
    <fullName>Installed_Packages__c</fullName>
    <label>Installed Packages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>