main/default/objects/Log__c/fields/Interview_GUID__c.field-meta.xml
<CustomField>
    <fullName>Interview_GUID__c</fullName>
    <label>Interview GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>