main/default/objects/Log__c/fields/Interview_GUID_External__c.field-meta.xml
<CustomField>
    <fullName>Interview_GUID_External__c</fullName>
    <externalId>true</externalId>
    <label>Interview GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>