main/default/objects/Log__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <description>True if this is the first occurrence of this error</description>
    <formula>First_Occurred_On__c == Created_At__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if this is the first occurrence of this error</inlineHelpText>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>