main/default/objects/Log__c/fields/Issue_Tracker_Status__c.field-meta.xml
<CustomField>
    <fullName>Issue_Tracker_Status__c</fullName>
    <label>Issue Tracker Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>