main/default/objects/Log__c/fields/Jira_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Integration_Status__c</fullName>
    <label>Jira Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ticket Pending</fullName>
            </value>
            <value>
                <fullName>New Ticket Created</fullName>
            </value>
            <value>
                <fullName>Existing Ticket Linked</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>