main/default/objects/Log__c/fields/Limits__c.field-meta.xml
<CustomField>
    <fullName>Limits__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Limits record that contains org limits data for the time when this log was created. This provides access to limit usage metrics without storing duplicate data on each log.</description>
    <label>Limits</label>
    <referenceTo>Limits__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>