main/default/objects/Log__c/fields/Organization_Url__c.field-meta.xml
<CustomField>
    <fullName>Organization_Url__c</fullName>
    <label>Organization Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>