main/default/objects/Log__c/fields/Originated_From__c.field-meta.xml
<CustomField>
    <fullName>Originated_From__c</fullName>
    <label>Originated From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>