main/default/objects/Log__c/fields/PagerDuty_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_Integration_Status__c</fullName>
    <label>PagerDuty Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>