main/default/objects/Log__c/fields/Pending_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Pending_Jobs__c</fullName>
    <label>Pending Jobs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>