main/default/objects/Log__c/fields/Post_Processing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Post_Processing_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Processing Complete</label>
    <type>Checkbox</type>
</CustomField>