main/default/objects/Log__c/fields/Post_Processing_Controls__c.field-meta.xml
<CustomField>
    <fullName>Post_Processing_Controls__c</fullName>
    <label>Post Processing Controls</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>