main/default/objects/Log__c/fields/Post_Processing_Settings__c.field-meta.xml
<CustomField>
    <fullName>Post_Processing_Settings__c</fullName>
    <label>Post Processing Settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>