main/default/objects/Log__c/fields/Post_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Post_Processing_Status__c</fullName>
    <label>Post Processing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>