main/default/objects/Log__c/fields/Regression__c.field-meta.xml
<CustomField>
    <fullName>Regression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regression</label>
    <type>Checkbox</type>
</CustomField>