main/default/objects/Log__c/fields/Related_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Id__c</fullName>
    <label>Related Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>