main/default/objects/Log__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <formula>IF(NOT(ISBLANK(Related_Id__c)), Related_Object_Type__c + &apos;: &apos; + HYPERLINK(Organization_Url__c&amp;&apos;/&apos;&amp; Related_Id__c , Related_Id__c, &apos;_blank&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Object</label>
    <type>Text</type>
</CustomField>