main/default/objects/Log__c/fields/Related_Objects__c.field-meta.xml
<CustomField>
    <fullName>Related_Objects__c</fullName>
    <label>Related Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>