main/default/objects/Log__c/fields/Request_Id_External__c.field-meta.xml
<CustomField>
    <fullName>Request_Id_External__c</fullName>
    <externalId>true</externalId>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>