main/default/objects/Log__c/fields/Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Role_Id__c</fullName>
    <label>Role Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>