main/default/objects/Log__c/fields/Salesforce_Error_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Error_Id__c</fullName>
    <label>Salesforce Error Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>