main/default/objects/Log__c/fields/Salesforce_License_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_License_Type_Name__c</fullName>
    <label>Salesforce License Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>