main/default/objects/Log__c/fields/Sent_To_Splunk__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Splunk__c</fullName>
    <label>Sent To Splunk</label>
    <type>DateTime</type>
</CustomField>