main/default/objects/Log__c/fields/Setup_Audit_Trail__c.field-meta.xml
<CustomField>
    <fullName>Setup_Audit_Trail__c</fullName>
    <label>Setup Audit Trail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>