main/default/objects/Log__c/fields/Slack_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Slack_Integration_Status__c</fullName>
    <label>Slack Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>