main/default/objects/Log__c/fields/Splunk_Link__c.field-meta.xml
<CustomField>
    <fullName>Splunk_Link__c</fullName>
    <formula>IF(NOT(ISNULL(Sent_To_Splunk__c)), HYPERLINK($Setup.Splunk_Settings__c.Splunk_Url__c&amp;IF(NOT(ISBLANK($Setup.Splunk_Settings__c.Splunk_Web_Port__c)),&apos;:&apos;&amp;$Setup.Splunk_Settings__c.Splunk_Web_Port__c,&apos;&apos;)&amp;&quot;/app/search/search?q=search%20index%3D%22pharos%22%20Id%3D%22&quot;&amp; CASESAFEID(Id) &amp;&quot;%22&amp;latest=&quot;,&quot;View in Splunk&quot;), &apos;&apos;)</formula>
    <label>Splunk Link</label>
    <type>Text</type>
</CustomField>