main/default/objects/Log__c/fields/Stack_trace_parse_result_available__c.field-meta.xml
<CustomField>
    <fullName>Stack_trace_parse_result_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stack trace parse result available</label>
    <type>Checkbox</type>
</CustomField>