main/default/objects/Log__c/fields/Stacktrace_Parse_Result__c.field-meta.xml
<CustomField>
    <fullName>Stacktrace_Parse_Result__c</fullName>
    <label>Stacktrace Parse Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>