main/default/objects/Log__c/fields/Total_Pending_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending_Jobs__c</fullName>
    <label>Total Pending Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>