main/default/objects/Log__c/fields/Transaction_Id_External__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id_External__c</fullName>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>