main/default/objects/Log__c/fields/Visualforce_Page__c.field-meta.xml
<CustomField>
    <fullName>Visualforce_Page__c</fullName>
    <label>Visualforce Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>