main/default/objects/Log__c/fields/Webhook_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Integration_Status__c</fullName>
    <label>Webhook Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>