main/default/objects/Log__c/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <label>Event</label>
</RecordType>