main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Icon__c</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Area__c</columns>
    <columns>Summary__c</columns>
    <columns>Is_New__c</columns>
    <columns>Created_At__c</columns>
    <columns>First_Occurred_On__c</columns>
    <columns>User__c</columns>
    <columns>Related_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>