main/default/objects/Log__c/listViews/Apex.listView-meta.xml
<ListView>
    <fullName>Apex</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Created_At__c</columns>
    <columns>Hash_1__c</columns>
    <columns>Is_Parent__c</columns>
    <columns>Summary__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Apex</value>
    </filters>
    <label>Apex</label>
</ListView>