main/default/objects/Log__c/listViews/BulkApi_Logs.listView-meta.xml
<ListView>
    <fullName>BulkApi_Logs</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Icon__c</columns>
    <columns>Type__c</columns>
    <columns>Is_New__c</columns>
    <columns>Bug_Tracker__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Bulk API v1</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Bulk API v2</value>
    </filters>
    <label>BulkApi Logs</label>
</ListView>