main/default/objects/Log__c/listViews/Flows.listView-meta.xml
<ListView>
    <fullName>Flows</fullName>
    <columns>NAME</columns>
    <columns>Created_At__c</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Flow_API_Name__c</columns>
    <columns>Flow_Link__c</columns>
    <columns>Flow_Version__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Flow</value>
    </filters>
    <label>Flows</label>
</ListView>