main/default/objects/Log__c/listViews/Process_Builder_Logs.listView-meta.xml
<ListView>
    <fullName>Process_Builder_Logs</fullName>
    <columns>NAME</columns>
    <columns>Icon__c</columns>
    <columns>Created_At__c</columns>
    <columns>Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Process Builder</value>
    </filters>
    <label>Process Builder Logs</label>
</ListView>